# chat/src/routes/chatRouter.js
@@ -2,12 +2,13 @@ import {Router} from 'express'
 import validator from "../middlewares/validator.js";
 import schema from "./validators/chatValidator.js";
 import {
-  createChat, listUserChats,
+  createChat, listClientConversations, listUserChats,
 } from "../controllers/chatController.js";
 
 const router = Router()
 
 router.post('/', validator(schema), createChat)
 router.get('/:userId', listUserChats)
+router.get('/conversations', listClientConversations)
 
 export default router
